Partial revert of change to make Notification Center focusable after alt+shift+n

Reason for partial revert:
See the bug for more comments.

Original cl:
https://codereview.chromium.org/2054473003

BUG=620801
TBR=xiyuan@chromium.org

Review-Url: https://codereview.chromium.org/2242733003
Cr-Commit-Position: refs/heads/master@{#411723}

Former-commit-id: 86817289921e010c0e4a8595ea9be48730a45a04