ui/message_center/views/message_center_view.cc
@@ -528,6 +528,16 @@ void MessageCenterView::Update(bool animate) {
   else
     SetVisibilityMode(Mode::NOTIFICATIONS, animate);
 
+  if (no_message_views) {
+    scroller_->SetFocusBehavior(FocusBehavior::NEVER);
+  } else {
+#if defined(OS_MACOSX)
+    scroller_->SetFocusBehavior(FocusBehavior::ACCESSIBLE_ONLY);
+#else
+    scroller_->SetFocusBehavior(FocusBehavior::ALWAYS);
+#endif
+  }
+
   UpdateButtonBarStatus();
 
   if (focus_manager && focused_view)
